// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`State render is called with new state when state changes 1`] = `
Object {
  "value": Object {
    "set": [Function],
    "value": 2,
  },
}
`;

exports[`State render is called with state objects 1`] = `
Object {
  "value": Object {
    "set": [Function],
    "value": 1,
  },
  "value2": Object {
    "set": [Function],
    "value": 2,
  },
}
`;

exports[`State setup accepts initial state as an object 1`] = `
Object {
  "value": "a",
  "value2": "b",
}
`;
